small fix with error modal design on mobile

--- a/src/components/Modal/ErrorModal.module.css
+++ b/src/components/Modal/ErrorModal.module.css
@@ -10,4 +10,5 @@
 
 .errMsg {
     text-align: center;
+    margin: 0;
 }
